# hermes-gui

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/hermes/gui/: experiment_producer.py  experiment_stream.py  gui_utils.py  notes_producer.py  visualizer_consumer.py
src/hermes/gui/widgets/: __init__.py  experiment_control.py  gaze.py  insoles.py  lineplot.py  skeleton.py  video.py  visualizer.py
